# CMake_Tutorials__Scripting

./: CMakeLists.txt
src/: main.cpp
